# software_build_example

./: .gitignore  README.md
10_vuejs/: README.md  components.html  components.js  index.html  test.css  test.js
10_vuejs/vue_cli_test/: package-lock.json
10_vuejs/vue_cli_test/hello-vue/: package-lock.json
10_vuejs/vue_cli_test/webpack_template/: README.md  index.html  package-lock.json  package.json
10_vuejs/vue_cli_test/webpack_template/src/: App.vue  stack.vue
10_vuejs/webpack/: README.md  container.vue  index.html  main.js  package-lock.json  package.json  phrase.vue  stack.vue  webpack.config.js
11_node_package_manager/: README.md
12_webpack/: README.md  index.js  phrases.js  say.js  webpack.config.js
13_web_apis/: 3d.html  3d.js  README.md  balls.js  canvas.html  canvas.js  goal.json  http.js  index.html  index.js  loop.html  loop.js  window.js
14_web_components/: README.md  icon-toggle.html
15_advanced_python/: func.py  iter.py
1_hello_world/: README.MD  hello_world
2_make/: README.MD  hello  makefile  makefile2
2_make/lib/: hello  makefile
3_1_cmake_find_package/: CMakeLists.txt  main.cpp
3_cmake/: CMakeLists.txt  Makefile  README.MD
3_cmake/lib/: hello.cpp  hello.cpp.in
4_cmake_ext/: CMakeLists.txt  README.MD  main.cpp
4_cmake_ext/local_lib/: CMakeLists.txt  Makefile  local_lib-config.cmake.in  local_lib.cpp
4_cmake_ext/local_lib/include/: local_lib.h
4_cmake_ext/online_lib/: CMakeLists.txt
5_Cmake_Installing/: CMakeLists.txt  Makefile  README.md  hello_world.cpp  hello_world.sh.in  install_manifest.txt
5_Cmake_Installing/hello_lib/: CMakeLists.txt
6_cpack/: CMakeLists.txt  README.md  main.cpp
7_BuildBot/: README.md
8_1_sql/: README.md  advanced_select.psql  create_db.psql  drop_db.psql  select.psql  todo.md
8_1_sql/examples/webshop/: create_db.psql
8_SQLAlchemy/: README.md  delete_testuser_psql.sh  hello_sql.py  hello_sql_1tomany.py  setup_psql.sh  setup_psql_1tomany.sh
9_flask/: README.md  hello_flask.py
9_flask/templates/: index.html
